# My-Project

./: .gitignore  next.config.ts  package-lock.json  package.json
app/: layout.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/product-list/: page.tsx
app/(design)/course/: page.tsx
app/(website)/: page.tsx
app/(website)/cart/: page.tsx
app/(website)/products/: page.tsx
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 202604300001_create_products.sql  202604300002_seed_products.sql
backend/src/: app.rs  config.rs  error.rs  main.rs  state.rs
backend/src/domain/: product.rs
backend/src/http/: routes.rs
backend/src/http/handlers/: health.rs  products.rs
backend/src/infrastructure/postgres/: product_repository.rs
backend/src/services/: product_service.rs
components/common/: AppSidebar.tsx  DeleteModal.tsx  Footer.tsx  Navbar.tsx
components/modules/cart/: CartColumns.tsx
components/modules/design/: CourseCard.tsx
components/modules/home/: FeatureBar.tsx  HomeProductList.tsx  ProductCard.tsx  (+2 more)
components/ui/: rating-with-score.tsx
config/: config.ts
data/: feature-list.ts
frontend/: eslint.config.mjs
frontend/app/: globals.css
frontend/config/: config.ts
frontend/data/: sale-banner-list.ts  slider-data.ts
frontend/hooks/: use-debounce.ts
frontend/lib/: api.ts
frontend/services/: product.service.ts  single-product.service.ts
frontend/store/: cart.store.ts
frontend/types/: cart.ts
lib/: api.ts  cart.ts
services/: categories.service.ts  product.service.ts
types/: product.ts
(+28 files in other folders)
